--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link href="index.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
-      <main role="main">
+      <main role="main" aria-live="assertive" hidden>
         <h1>Search repos by name on Youtube</h1>
           <form action="#" class="js-search-form">
             <label for="query"></label>
