--- a/index.html
+++ b/index.html
@@ -8,19 +8,20 @@
           src="https://code.jquery.com/jquery-3.2.1.min.js"
           integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
           crossorigin="anonymous"></script>
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css" rel="stylesheet"/>
         <link href="index.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
-      <main role="main" aria-live="assertive" hidden>
+      <main role="main">
         <h1>Search repos by name on Youtube</h1>
           <form action="#" class="js-search-form">
-            <label for="query"></label>
-            <input type="text" class="js-query">
+            <label for="js-query" aria-label="user input to search from youtube"></label>
+            <input type="text" id="js-query">
             <button role="button" type="submit">Search</button>
           </form>
           
           <h2>Results</h2>
-          <div class="js-search-results">
+          <div class="js-search-results" aria-live="assertive" hidden>
             
           </div>
       </main>
